ci: set concurrency for test and build-artifact workflows
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/compile-windows-binary/action.yml
+++ b/.github/actions/compile-windows-binary/action.yml
@@ -34,5 +34,5 @@ runs:
       uses: actions/cache/save@v4
       with:
         path: ${{ inputs.binary-path }}
-        key: ${{ inputs.binary-cache-key }}-${{ github.run_id }}
+        key: ${{ inputs.binary-cache-key }}
         enableCrossOsArchive: true
