chore(renovate): update merge managers and concurrent PRs limit
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -8,9 +8,22 @@
     "enabled": true
   },
   "dependencyDashboard": false,
+  "prConcurrentLimit": 3,
   "packageRules": [
     {
       "matchManagers": ["gomod"],
+      "automerge": true
+    },
+    {
+      "matchManagers": ["pre-commit"],
+      "automerge": true
+    },
+    {
+      "matchManagers": ["npm"],
+      "automerge": true
+    },
+    {
+      "matchManagers": ["github-actions"],
       "automerge": true
     }
   ]
