--- a/desktop/src-tauri/Cargo.toml
+++ b/desktop/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "devpod-desktop"
 version = "0.1.0"
-description = "A Tauri App"
+description = "Devpod Desktop Application"
 authors = ["loft.sh"]
 license = ""
 repository = ""
