--- a/e2e/tests/up/testdata/docker-with-multi-stage-build/Dockerfile
+++ b/e2e/tests/up/testdata/docker-with-multi-stage-build/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/vscode/devcontainers/ruby:3.2-bullseye AS base
+FROM ubuntu AS base
 
 RUN apt update
 RUN apt install vim -y
