fixup!: fix action syntax
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -57,8 +57,8 @@ runs:
       shell: bash
       run: chmod +x ${{ inputs.binary-path }}
 
+    # NOTE: Pre-pull commonly used docker images to speed up tests
     - name: pre-pull docker images
-      description: Pre-pull commonly used docker images to speed up tests
       shell: bash
       run: |
         docker pull alpine
