fixup!: constrain pre-pull docker to up label
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -58,7 +58,10 @@ runs:
       run: chmod +x ${{ inputs.binary-path }}
 
     # NOTE: Pre-pull commonly used docker images to speed up tests
+    # with retry logic to handle transient network issues. Limited to 'up'
+    # tests to avoid unnecessary pulls.
     - name: pre-pull docker images
+      if: inputs.label == 'up'
       shell: bash
       run: |
         pull_with_retry() {
