--- a/e2e/tests/up/testdata/docker-compose-overrides/docker-compose.yaml
+++ b/e2e/tests/up/testdata/docker-compose-overrides/docker-compose.yaml
@@ -2,6 +2,6 @@ version: '3'
 
 services:
   app:
-    image: mcr.microsoft.com/devcontainers/go:1-bookworm
+    image: mcr.microsoft.com/devcontainers/go:1
     volumes:
       - .:/workspaces:cached
