--- a/e2e/tests/up/testdata/docker-compose-securityOpt/docker-compose.yaml
+++ b/e2e/tests/up/testdata/docker-compose-securityOpt/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    image: mcr.microsoft.com/devcontainers/go:1-bookworm
+    image: mcr.microsoft.com/devcontainers/go:1
     command: sleep infinity
     volumes:
       - .:/workspaces:cached
