--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -21,6 +21,7 @@ env:
 
 jobs:
   build:
+    name: Build and Run Devcontainer
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
