--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,17 @@
   },
   "dependencyDashboard": false,
   "prConcurrentLimit": 1,
+  "platformAutomerge": true,
   "packageRules": [
+    {
+      "matchUpdateTypes": ["major"],
+      "automerge": false,
+      "prPriority": -1
+    },
+    {
+      "matchUpdateTypes": ["minor", "patch"],
+      "prPriority": 10
+    },
     {
       "matchManagers": ["github-actions"],
       "automerge": true,
