feat: setup credential proxying
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,6 +36,7 @@ jobs:
           - machineprovider
           - provider
           - ssh
+          - commands
     steps:
       - uses: actions/checkout@v6
 
@@ -68,10 +69,13 @@ jobs:
         label:
           - build
           - up
+          - network
         include:
           - label: build
             needs-kind: true
           - label: up
+            needs-kind: true
+          - label: network
             needs-kind: true
 
     steps:
