refactor(e2e): expect github credentials for private repositories
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -106,6 +106,7 @@ runs:
       shell: bash
       working-directory: ./e2e
       env:
+        # NOTE: Github credentials are required for tests using private repos
         GH_USERNAME: ${{ inputs.gh-username }}
         GH_ACCESS_TOKEN: ${{ inputs.gh-access-token }}
       run: |
