fixup!: pin mirror and upgrade to go 1.25.5
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -52,6 +52,10 @@
     {
       "matchPackageNames": ["github.com/loft-sh/api/v4"],
       "allowedVersions": "v4.3.0-devpod.alpha.31"
+    },
+    {
+      "matchPackageNames": ["github.com/tailscale/tailscale"],
+      "allowedVersions": "v1.92.2"
     }
   ]
 }
