fixup!: pix version
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -56,6 +56,10 @@
     {
       "matchPackageNames": ["github.com/tailscale/tailscale"],
       "allowedVersions": "v1.92.2"
+    },
+    {
+      "matchPackageNames": ["gopkg.in/yaml.v2"],
+      "allowedVersions": "v2.4.0"
     }
   ]
 }
