feat(devcontainer/feature): add dependsOn per devcontainer spec
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -87,8 +87,8 @@ runs:
           return 1
         }
 
-        pull_with_retry alpine
         pull_with_retry ubuntu
+        pull_with_retry mcr.microsoft.com/devcontainers/base:alpine
         pull_with_retry mcr.microsoft.com/devcontainers/go:1
         pull_with_retry mcr.microsoft.com/devcontainers/python:latest
 
