--- a/desktop/tsconfig.json
+++ b/desktop/tsconfig.json
@@ -22,7 +22,7 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src", "./eslint.config.js", "update-window", "vite.config.ts"],
+  "include": ["src", "./eslint.config.js", "update-window"],
   "references": [
     {
       "path": "tsconfig.node.json"
