--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -75,7 +75,7 @@ jobs:
         with:
           name: linux-${{ matrix.target }}-desktop
           path: desktop/src-tauri/target/${{ matrix.target }}/release/bundle/**/*
-          retention-days: 1
+          retention-days: ${{ vars.BUILD_ARTIFACTS_RETENTION_DAYS || 3 }}
           if-no-files-found: warn
 
   build-macos:
@@ -130,7 +130,7 @@ jobs:
           path: |
             artifacts/devpod-cli-*
             desktop/src-tauri/target/${{ matrix.target }}/release/bundle/**/*
-          retention-days: 1
+          retention-days: ${{ vars.BUILD_ARTIFACTS_RETENTION_DAYS || 3 }}
           if-no-files-found: warn
 
   build-windows:
@@ -181,5 +181,5 @@ jobs:
           path: |
             artifacts/devpod-cli-*
             desktop/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/**/*
-          retention-days: 1
+          retention-days: ${{ vars.BUILD_ARTIFACTS_RETENTION_DAYS || 3 }}
           if-no-files-found: warn
