fixup!: add retention days for linux
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -68,6 +68,7 @@ jobs:
           name: linux-${{ matrix.target }}-cli
           path: artifacts/devpod-cli-*
           if-no-files-found: error
+          retention-days: ${{ vars.BUILD_ARTIFACTS_RETENTION_DAYS || 3 }}
 
       - name: upload desktop app artifacts
         if: matrix.target == 'x86_64-unknown-linux-gnu'
