fixup!: lint issues
Signed-off-by: Samuel K <skevette@amazon.com>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -5,6 +5,11 @@ vars:
   BUILD_ARCHS: '{{default "amd64 arm64" .BUILD_ARCHS}}'
 
 tasks:
+  lint:
+    desc: Run golangci-lint
+    cmds:
+      - golangci-lint run
+
   setup:development:
     desc: Setup development environment
     cmds:
