ci: setup pr target event for contributors
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -14,7 +14,16 @@ on:
           - linux
           - macos
           - windows
-  pull_request:
+  pull_request_target:
+    paths:
+      - 'cmd/**'
+      - 'pkg/**'
+      - 'desktop/**'
+      - 'e2e/**'
+      - 'Cargo.toml'
+      - 'Cargo.lock'
+      - 'go.mod'
+      - 'go.sum'
 
 jobs:
   build-linux:
