--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,16 @@ on:
   push:
     branches: [main]
   workflow_dispatch:
-  pull_request:
+  pull_request_target:
+    paths:
+      - 'cmd/**'
+      - 'pkg/**'
+      - 'desktop/**'
+      - 'e2e/**'
+      - 'Cargo.toml'
+      - 'Cargo.lock'
+      - 'go.mod'
+      - 'go.sum'
 
 jobs:
   compile-linux:
