--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -4,16 +4,18 @@ on:
   push:
     branches: [main]
   workflow_dispatch:
+  pull_request:
   pull_request_target:
+    types: [opened, synchronize, reopened]
     paths:
-      - "cmd/**"
-      - "pkg/**"
-      - "desktop/**"
-      - "e2e/**"
-      - "Cargo.toml"
-      - "Cargo.lock"
-      - "go.mod"
-      - "go.sum"
+      - cmd/**
+      - pkg/**
+      - desktop/**
+      - e2e/**
+      - Cargo.toml
+      - Cargo.lock
+      - go.mod
+      - go.sum
 
 jobs:
   build-linux:
