ci: add commit verification step
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -36,3 +36,16 @@ jobs:
           key: pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
 
       - run: pre-commit run --all-files
+
+  commit:
+    name: Check Commits
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - uses: actions/checkout@v6
+
+      - uses: 1Password/check-signed-commits-action@v1
+
+      - uses: wagoid/commitlint-github-action@v6
