fixup!: add no strip for linuxdeploy issue
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/create-linux-release-artifacts/action.yml
+++ b/.github/actions/create-linux-release-artifacts/action.yml
@@ -47,6 +47,9 @@ runs:
         SIGN: ${{ inputs.app_image_sign }}
         SIGN_KEY: ${{ inputs.app_image_sign_key }}
         APPIMAGETOOL_SIGN_PASSPHRASE: ${{ inputs.app_image_sign_passphrase }}
+        # resolves linuxdeploy build failure issue
+        # https://github.com/tauri-apps/tauri/issues/8929
+        NO_STRIP: true
 
     - name: build linux tar.gz
       shell: bash
