--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -58,8 +58,7 @@ jobs:
 
       - uses: actions/checkout@v6
 
-      - name: setup Go
-        uses: magnetikonline/action-golang-cache@v5
+      - uses: actions/setup-go@v6
         with:
           go-version-file: go.mod
 
@@ -67,3 +66,24 @@ jobs:
         uses: golangci/golangci-lint-action@v9
         with:
           version: latest
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - uses: actions/setup-go@v6
+        with:
+          go-version-file: go.mod
+
+      - uses: goreleaser/goreleaser-action@v6
+        with:
+          distribution: goreleaser
+          version: latest
+          args: build --id devpod
+
+      - uses: actions/upload-artifact@v6
+        with:
+          name: devpod-binaries
+          path: dist/
