--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -80,8 +80,8 @@ jobs:
       - uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: latest
-          args: build --id devpod
+          version: "~> v2"
+          args: build --id devpod --snapshot
 
       - uses: actions/upload-artifact@v6
         with:
